tests/ui/derive/fail_validate_serde_alias_field.rs
#[derive(foundry::Validate)]
struct AliasFieldValidate {
    #[serde(alias = "emailAddress")]
    email: String,
}

fn main() {}
